--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:seed": "tsx --require dotenv/config src/scripts/seed-db.ts"
   },
   "dependencies": {
+    "@types/react-syntax-highlighter": "^15.5.13",
     "bcryptjs": "^3.0.2",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
@@ -19,13 +20,14 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/typography": "^0.5.0-alpha.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/pg": "^8.15.4",
@@ -35,6 +37,8 @@
     "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "lodash.castarray": "^4.4.0",
+    "lodash.merge": "^4.6.2",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
