--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "pg": "^8.16.2",
+    "prettier": "^3.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
