--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:seed": "tsx --require dotenv/config src/scripts/seed-db.ts"
   },
   "dependencies": {
+    "@fengkx/react-syntax-highlighter": "^15.6.1",
     "@types/react-syntax-highlighter": "^15.5.13",
     "bcryptjs": "^3.0.2",
     "next": "15.3.4",
@@ -21,7 +22,6 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
-    "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
     "zxcvbn": "^4.4.2"
   },
