add db initialization

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "db:init": "tsx --require dotenv/config src/scripts/init-db.ts",
-    "db:seed": "tsx --require dotenv/config src/scripts/seed-db.ts"
+    "db:seed": "tsx --require dotenv/config src/scripts/seed-db.ts",
+    "db:reset": "tsx --require dotenv/config src/scripts/reset-db.ts",
+    "db:nuke": "tsx --require dotenv/config src/scripts/nuke-db.ts"
   },
   "dependencies": {
     "@fengkx/react-syntax-highlighter": "^15.6.1",
