--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "db:seed": "tsx --require dotenv/config src/scripts/seed-db.ts",
     "db:reset": "tsx --require dotenv/config src/scripts/reset-db.ts",
     "db:nuke": "tsx --require dotenv/config src/scripts/nuke-db.ts",
+    "db:test-auto-init": "tsx --require dotenv/config src/scripts/test-auto-init.ts",
+    "db:test-api-auto-init": "tsx --require dotenv/config src/scripts/test-api-auto-init.ts",
     "user:resetpw": "tsx --require dotenv/config src/scripts/reset-password.ts"
   },
   "dependencies": {
